@@ -70,28 +70,35 @@ Misc.
 	     This should be an AddressDataBus, but redirect all accesses to
 	     other devices that also implement the AddressDataBus interface.
 		[ ]  Check for overlaps in MakeSureMemoryMapExists!
+		[ ]  Unit tests for the above!
 	        [X]  Forward accesses to individual other devices/components.
 		[ ]  AddressDataBus should be extended to allow for direct
 		     page mapping.
 
-	[/]  Work on MIPS_CPUComponent::Run() and the generic CPUComponent
-		[/]  Connect the CPU to an AddressDataBus.
-		[ ]  virtual to physical translation
-		[ ]  Handling of read/write errors?
-		[ ]  Both MIPS16 and regular encoding.
-		[ ]  Unit tests!
+	[ ]  testmips
+		[/]  Work on MIPS_CPUComponent::Run() and the generic
+		     CPUComponent
+			[/]  Connect the CPU to an AddressDataBus.
+			[ ]  virtual to physical translation
+			[ ]  Handling of read/write errors?
+			[ ]  Both MIPS16 and regular encoding.
+			[ ]  Unit tests!
+		[ ]  Framebuffer device :-)
+		[ ]  Start with SMP early on.
+		[ ]  Caches!
+		[ ]  Native code generation... etc.
 
-	[ ]  File loader: Load stuff into emulated RAM (or ROM) components
-	     (actually into any AddressDataBus component)
-	     Perhaps: Into the first bus in a machine? (This will end up
-	     being mainbus0, usually.)
+	[ ]  File loader: Load stuff into emulated RAM (or ROM) components.
+	     Note: Usually, ELFs contain _virtual_ addresses, so file loading
+	     needs to go through a CPU to be properly address translated!
 		[ ]  ELF
 		[ ]  a.out
 		[ ]  raw binaries
 
-	[ ]  Make some initial things in the GUI work, such as a window
-	     for the text console, and some initial buttons that execute
-	     commands.
+	[ ]  Make some initial things in the GUI work:
+		[ ]  A window for the text console
+		[ ]  Undo/redo status update when necessary
+		[ ]  Workspace = show current emulation setup
 
 	[ ]  Main run loop: Verify that both cycle accurate and larger chunks
 	     works well. Unit test?
@@ -213,6 +220,9 @@ Actions and undo/redo
 
 CommandInterpreter
 ------------------
+
+	[ ]  list-components should include the "description" of each
+	     component.
 
 	[/]  Tab completion for everything:
 		[X]  command names
